@@ -3,6 +3,10 @@ CVS code -
 	- Miscellaneous comment fixes. (DLR)
 	- Remove unnecessary #ifdef around termios.h #include in nano.c.
 	  (DLR)
+	- Sort the default strings for brackets and punct, and the "or"
+	  atom in the default regex string for quotestr, according to
+	  ASCII.  Changes to main(), nano.1, nanorc.5, and
+	  nanorc.sample. (DLR)
 - winio.c:
   edit_scroll()
 	- Redraw the lines before and after the scrolled region even if
@@ -11,6 +15,13 @@ CVS code -
 	  screen down one line and leaves the cursor on the last line of
 	  the screen, in which case we need to update the line after the
 	  scrolled region. (DLR)
+- doc/nano.1:
+	- Better display the default values for quotestr. (DLR)
+- doc/nanorc.5:
+	- Give the default values for the brackets and punct options,
+	  and better display the default values for quotestr. (DLR)
+- doc/nanorc.sample:
+	- Remove unneeded comment. (DLR)
 
 GNU nano 1.3.10 - 2005.12.23
 - General:
